--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,11 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, React, Games">
     <meta name="author" content="Minh Nguyen">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free Games</title>
+    <title>เราชนะ</title>
   </head>
   <body>
+    <script src="bundle.js"></script>
+    
     <div id="root"></div>
   </body>
 </html>
